arc-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arc-demo-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: arc-demo.thepixpivot.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arc-demo-service
                port:
                  number: 80
